# plotly_dash

./: .gitignore  README.md  app.py  helper.py  pyproject.toml  technicals.py
assets/: styles.css
data/: dataset.xlsx
