[tool.poetry]
name = "plotly-dash"
version = "0.1.0"
description = "Dashboard"
authors = ["xavsant <xavierboons2021@economics.smu.edu.sg>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.9"
numpy = "2.0.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
plotly = "^6.4.0"
dash = "^3.3.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
